[tool.poetry]
name = "python-carleton"
version = "0.1.0"
description = ""
authors = ["Jagadeesh Garapati <jagadeesh@aarth.io>"]
readme = "README.md"
packages = [{include = "python_django"},
            {include = "django-extensions"}]

[tool.poetry.dependencies]
python = "^3.10.7"
Django = "^4.1.3"
asgiref = "^3.5.2"
neo4j-driver = "^4.3.6"
neo4j = "^5.0.1"
neobolt = "^1.7.17"
neotime = "^1.7.4"
pytz = "^2021.1"
six = "^1.15.0"
sqlparse = "^0.4.3"
django-registration-redux = "^1.1"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
markdown = "^3.4.1"
django-filter = "^22.1"
pip = "^22.3.1"
python-dotenv = "0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
